--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,38 @@ body::-webkit-scrollbar-thumb {
 body::-webkit-scrollbar-thumb:hover {
     background-color: #041f4ed5;
 }
+/* 
+@keyframes drop {
+    90% {
+      height: 20px;
+    }
+    100% {
+      height: 160px;
+      transform: translateY(calc(100vh + 160px));
+    }
+  }
+  
+  .animate-drop-3s-02s {
+    animation: drop 3s infinite linear;
+    animation-delay: 0.2s;
+  }
+  
+  .animate-drop-2s-07s {
+    animation: drop 2s infinite linear;
+    animation-delay: 0.7s;
+  }
+  
+  .animate-drop-3s-09s {
+    animation: drop 3s infinite linear;
+    animation-delay: 0.9s;
+  }
+  
+  .animate-drop-2s-12s {
+    animation: drop 2s infinite linear;
+    animation-delay: 1.2s;
+  }
+  
+  .text-shadow-4px-4px-green-400 {
+    text-shadow: 4px 4px 0px #00ffc0;
+  }
+   */
